--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "netlify": "^13.1.21",
     "netlify-cli": "^17.34.3",
     "netlify-lambda": "^2.0.16",
     "nodemon": "^3.1.4",
